[package]
name = "event_bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
once_cell = "1.9.0"
rand = "0.8.4"  # 随机数库
uuid = { version = "0.8.2", features = ["v4"] } # uuid库
log = "0.4.14" # 日志库
crossbeam-channel = "0.5.2" # 队列库
num_cpus = "1.13.1" # 获取cpu信息
tokio = {version ="1.15.0", features = ["full"] } # 协程库
chrono = "0.4.19" # 时间库 临时使用

